# EFA

./: .gitignore  Makefile  README.md  environment.yml  log.md  plan.md  pyproject.toml  requirements-gpu.txt
common/: __init__.py  config.py  io.py  reproducibility.py
configs/: base.yaml  math500_100.yaml  math500_full.yaml  smoke.yaml
early_exit/: __init__.py  build_checkpoints.py  features.py  oracle.py  train_classifier.py
evaluation/: __init__.py  answers.py  score_results.py
generation/: __init__.py  check_gpu.py  generate_dataset.py  run_model.py  utils.py
sampling/: __init__.py  power_sampling.py  utils.py
scripts/: day45_rigorous_eval.py  day46_temporal_features.py  setup_autodl.sh
tests/: test_answers.py  test_config.py  test_early_exit.py  test_generate_dataset.py  test_sampling.py  test_score_results.py
